[ZEPPELIN-411] JDK8 support