@@ -37,7 +37,7 @@ for var in GPG_PASSPHRASE ASF_USERID ASF_PASSWORD; do
   fi
 done
 
-export MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=512m"
+export MAVEN_OPTS="-Xmx2g -XX:MaxMetaspaceSize=512m"
 RED='\033[0;31m'
 NC='\033[0m' # No Color
 
